wreport (3.36-1.1) UNRELEASED; urgency=medium

  * Non-maintainer upload.
  * Build with pybuild.

 -- Stefano Rivera <stefanor@debian.org>  Mon, 31 Jul 2023 13:00:15 +0200

wreport (3.36-1) unstable; urgency=medium

  * New upstream version (Closes: #1037898)
  * Use `DEB_PYTHON_INSTALL_LAYOUT = deb` to build with meson

 -- Enrico Zini <enrico@debian.org>  Thu, 27 Jul 2023 15:46:12 +0200

wreport (3.35-2) unstable; urgency=medium

  * Build-Depend on python3-dev instead of python3-all-dev (Closes: #1024302)
  * Depend on dh-sequence-sphinxdoc, simplifying debian/rules and B-D list
  * Depend on debhelper-compat, removed debian/compat
  * Stop using dh-buildinfo
  * Updated Standards-Version, no changes required
  * Added Vcs-Browser
  * Mark the two test executable as debian/not-installed for now

 -- Enrico Zini <enrico@debian.org>  Sat, 19 Nov 2022 13:29:35 +0100

wreport (3.35-1) unstable; urgency=medium

  * Fixed a corner case in decoding of associated fields (#52)

 -- Emanuele Di Giacomo <edigiacomo@arpae.it>  Wed, 19 Oct 2022 10:50:22 +0200

wreport (3.34-1) unstable; urgency=medium

  * Removed broken debian/watch
  * Versioned dependency on debhelper
  * Removed unneeded --parallel argument to dh in debian/rules
  * Add use of ${sphinxdoc:Depends} in libwreport-doc
  * New upstream version. Closes: #1013069
     - Fixed decoding of missing values in compressed MODES messages (#48)
     - Conversion V <-> mV and NTU <-> LM
     - Fixed decoding of associated fields in compressed messages (#47)
     - Fixed dtable parser (#43)
     - Improved documentation (#42)
     - Implemented `var_hook_domain_errors` option, required by dballe:#241
     - Implemented `var_clamp_domain_errors` option, required by dballe:#241
     - Support Lua 5.4
     - Decode compressed string with non-empty reference values (#38)
     - Updated wobble and wobblepy
     - Always include wreport/version.h so that code that needs it can be compatibile with old versions