@@ -2,6 +2,7 @@ wreport (3.36-1.1) UNRELEASED; urgency=medium
 
   * Non-maintainer upload.
   * Build with pybuild.
+  * Port to the new pybuild meson plugin.
 
  -- Stefano Rivera <stefanor@debian.org>  Mon, 31 Jul 2023 13:00:15 +0200
 
